Connected add button to action.

--- a/TelegramBotManager/Base.lproj/Main.storyboard
+++ b/TelegramBotManager/Base.lproj/Main.storyboard
@@ -26,7 +26,6 @@
         <!--Bot List-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <viewController title="Bot List" id="BYZ-38-t0r" customClass="BotListViewController" customModule="TelegramBotManager" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
@@ -74,6 +73,9 @@
                                 <state key="normal" title="TEST">
                                     <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="addButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="z7H-M3-rUu"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -93,6 +95,7 @@
                         <outlet property="tableView" destination="Hx7-Xz-LUc" id="kIh-Rh-MgY"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-377.5" y="377.5"/>
         </scene>
