Started refactoring of bot list. Next step: handle storage asynchronously (Promises or RxSwift).

--- a/TelegramBotManager/Base.lproj/Main.storyboard
+++ b/TelegramBotManager/Base.lproj/Main.storyboard
@@ -63,6 +63,10 @@
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="bor-Ld-pvO"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="RHa-eK-gdr"/>
+                                </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TnY-4D-bgK" customClass="CircularAddButton" customModule="TelegramBotManager" customModuleProvider="target">
                                 <rect key="frame" x="302" y="590" width="57" height="57"/>
