--- a/TelegramBotManager/BotListViewController.xib
+++ b/TelegramBotManager/BotListViewController.xib
@@ -34,6 +34,9 @@
                     <state key="normal" title="TEST">
                         <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
+                    <connections>
+                        <action selector="addButtonPressed:" destination="-1" eventType="touchUpInside" id="X5U-yg-YsY"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
